simplify cond format copy&paste code, fdo#58677

This should also help with fdo#57896 and some other problems I found

Change-Id: I8cb3eb69a7ec1413cb57ce81c5f4d806250474e5